# pae-qt2025-OBC-sw

./: CMakeLists.txt  build.sh
Core/Inc/: main.h  stm32mp1xx_hal_conf.h  stm32mp1xx_it.h
Core/Inc/Subsystems/: obdh.h
Core/Inc/Utils/: log.h
Core/Src/: main.c  stm32mp1xx_hal_msp.c  stm32mp1xx_it.c
Core/Src/Subsystems/: obc.c  obdh.c  payload.c
Core/Src/Utils/: log.c
Drivers/CMSIS/Device/ST/STM32MP1xx/Include/: stm32mp157fxx_cm4.h
Drivers/STM32MP1xx_HAL_Driver/Src/: stm32mp1xx_hal_cortex.c  stm32mp1xx_hal_rcc.c  stm32mp1xx_hal_rcc_ex.c  stm32mp1xx_hal_spi.c
RemoteProc/: fw_cortex_m4.sh
cmake/: toolchain.cmake
